force-app/src/objects/Engagement__c.object
<CustomObject>
    <description>Previous name = Accreditation. Likewise, Accreditation Activity was also renamed to Engagement Activity.</description>
    <fields>
        <fullName>Acc_end_date_reports__c</fullName>
        <description>Accreditation end date to use in comparative reports.</description>
        <formula>Accreditation_end_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accreditation end date reports</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_External_ID__c</fullName>
        <description>Account ID used for unique ID for upload data</description>
        <externalId>true</externalId>
        <label>Account External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Accreditation_Coordinator_Email_del__c</fullName>
        <label>Accreditation Coordinator - Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Accreditation_Coordinator_First_Given__c</fullName>
        <label>Accreditation Coordinator - First/Given</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation_Coordinator_Last_Surname__c</fullName>
        <label>Accreditation Coordinator - Last/Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation_Coordinator_Position__c</fullName>
        <label>Accreditation Coordinator - Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accreditation Coordinator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Accreditations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accreditation_Coordinator_ref__c</fullName>
        <formula>School_Name__r.Accreditation_Coordinator_Contact__r.FirstName&amp;&quot; &quot;&amp;School_Name__r.Accreditation_Coordinator_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accreditation Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation_External_ID__c</fullName>
        <description>External ID for data loads</description>
        <externalId>true</externalId>
        <label>Accreditation External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Accreditation_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accreditation Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Accreditation_Partner__c.Partner__r.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Accreditation_Partner__c</referenceTo>
        <relationshipName>Accreditations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accreditation_Partner_text__c</fullName>
        <formula>Accreditation_Partner__r.Partner__r.Name</formula>
        <label>Accreditation Partner text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accreditation_Status__c</fullName>
        <label>Accreditation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accreditation Applicant</fullName>
                </value>
                <value>
                    <fullName>Accredited</fullName>
                </value>
                <value>
                    <fullName>Accreditation Candidate</fullName>
                </value>
                <value>
                    <fullName>Re-Accreditation Candidate</fullName>
                </value>
                <value>
                    <fullName>Re-Accredited</fullName>
                </value>
                <value>
                    <fullName>Withdrawn (school&apos;s decision)</fullName>
                </value>
                <value>
                    <fullName>Withdrawn (CIS&apos; decision)</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Active Member</fullName>
                </value>
                <value>
                    <fullName>Active Successful Applicant, paid membership fee</fullName>
                </value>
                <value>
                    <fullName>Non Member, Inactive Status</fullName>
                </value>
                <value>
                    <fullName>Active Applicant, paid membership fee</fullName>
                </value>
                <value>
                    <fullName>Active Applicant, not paid membership fee</fullName>
                </value>
                <value>
                    <fullName>Active Enquiry, paid membership fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accreditation_end_date__c</fullName>
        <label>Accreditation end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accreditation_start_date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Accreditation start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Boarding_Facilities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field has been replaced with the Account field Boarding/Homestay.</description>
        <inlineHelpText>Boarding Facilities/ Residential Accommodation/Hom (label)</inlineHelpText>
        <label>OBSOLETE - Boarding Facilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_Email__c</fullName>
        <label>Confirm Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CIS_RCountry</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_Date_Reports__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Reports</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Re_accreditation_Choices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for  Re-accreditation Choices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Head_of_School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Head of School</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Accreditations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Head_of_School_ref__c</fullName>
        <description>formula reference to Head of School on Account</description>
        <formula>School_Name__r.Head_of_School__r.FirstName&amp;&quot; &quot;&amp;School_Name__r.Head_of_School__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Head of School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>SSEO: School Support and Evaluation Officer
IA: International Advisor</inlineHelpText>
        <label>IAA/IA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accreditations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IAC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the person who is your first point of contact for technical issues and questions about documents and deadlines.</inlineHelpText>
        <label>School Services Advisor (IAC)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accreditations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>My_Institution__c</fullName>
        <description>Used to limit accreditation activity view to own school</description>
        <formula>IF ( School_Name_ID__c = $User.Account_ID__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Institution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_other_agency_ies_for_collaboration__c</fullName>
        <label>Name other agency(ies) for collaboration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Current Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application_form_submitted</fullName>
                    <label>Application form submitted</label>
                </value>
                <value>
                    <fullName>Preparation evaluation</fullName>
                </value>
                <value>
                    <fullName>Team evaluation</fullName>
                </value>
                <value>
                    <fullName>Accreditation achieved</fullName>
                </value>
                <value>
                    <fullName>Accreditation denied</fullName>
                </value>
                <value>
                    <fullName>Annual accreditation year 3</fullName>
                </value>
                <value>
                    <fullName>Annual accreditation year 4</fullName>
                </value>
                <value>
                    <fullName>Annual accreditation year 5</fullName>
                </value>
                <value>
                    <fullName>Accredited</fullName>
                    <isActive>false</isActive>
                    <label>Accredited</label>
                </value>
                <value>
                    <fullName>Enter information</fullName>
                    <isActive>false</isActive>
                    <label>Enter information</label>
                </value>
                <value>
                    <fullName>Gathering information</fullName>
                    <isActive>false</isActive>
                    <label>Gathering information</label>
                </value>
                <value>
                    <fullName>Get first judgement</fullName>
                    <isActive>false</isActive>
                    <label>Get first judgement</label>
                </value>
                <value>
                    <fullName>Not accredited</fullName>
                    <isActive>false</isActive>
                    <label>Not accredited</label>
                </value>
                <value>
                    <fullName>Self-study</fullName>
                    <isActive>false</isActive>
                    <label>Self-study</label>
                </value>
                <value>
                    <fullName>Visit</fullName>
                    <isActive>false</isActive>
                    <label>Visit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protocol__c</fullName>
        <label>Protocol</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7th Edition</fullName>
                </value>
                <value>
                    <fullName>8th Edition</fullName>
                </value>
                <value>
                    <fullName>CIS International Accreditation 2016</fullName>
                </value>
                <value>
                    <fullName>CIS International Accreditation 2019</fullName>
                </value>
                <value>
                    <fullName>New Framework</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_accreditation_Pathway_Choice__c</fullName>
        <label>Re-accreditation Pathway Choice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pathway 1 - Business as usual</fullName>
                </value>
                <value>
                    <fullName>Pathway 2 - Learning and Teaching Deep Dive</fullName>
                </value>
                <value>
                    <fullName>Pathway 2 - Well Being for Life Long Learning Deep Dive</fullName>
                </value>
                <value>
                    <fullName>Pathway 2 - Global Citizenship and Intercultural learning Deep Dive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_ending_Accreditation__c</fullName>
        <label>Reason for ending Accreditation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Status__c</fullName>
        <label>Record Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Forecasted</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Coördinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accreditations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Report Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accreditations4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <label>Revision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Name_ID__c</fullName>
        <formula>School_Name__r.Id</formula>
        <label>School Name ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Name_Text__c</fullName>
        <formula>School_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>School Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmitID__c</fullName>
        <displayFormat>ACC-{0000}</displayFormat>
        <label>SubmitID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Email__c</fullName>
        <label>Technical Contact - Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_First_Given_Name__c</fullName>
        <label>Technical Contact - First/Given Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Last_Surname__c</fullName>
        <label>Technical Contact - Last/Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact_Position_Title__c</fullName>
        <label>Technical Contact - Position Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>total_accreditation_activities__c</fullName>
        <label>total accreditation activities</label>
        <summaryForeignKey>Engagement_Activity__c.Engagement__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Engagement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Accreditation_Status__c</columns>
        <columns>Reason_for_ending_Accreditation__c</columns>
        <columns>Accreditation_end_date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Accred_with_SSEO_and_RM</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Accreditation_Status__c</columns>
        <columns>Report_Manager__c</columns>
        <columns>IAA__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Accreditation_Status__c</field>
            <operation>equals</operation>
            <value>Accreditation Applicant,Accreditation Candidate,Re-Accreditation Candidate,Re-Accredited</value>
        </filters>
        <label>All Accred with SSEO and RM</label>
    </listViews>
    <listViews>
        <fullName>My_School_s_Accreditation_Events</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>My_Institution__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My School&apos;s Accreditation Events</label>
        <sharedTo>
            <allCustomerPortalUsers></allCustomerPortalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Withdrawn_Members_Accred_incl_Reasons</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Accreditation_Status__c</columns>
        <columns>Reason_for_ending_Accreditation__c</columns>
        <columns>Accreditation_end_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Accreditation_Status__c</field>
            <operation>equals</operation>
            <value>Withdrawn (school&apos;s decision),Withdrawn (CIS&apos; decision)</value>
        </filters>
        <label>Withdrawn Mem/Accred. (SO Test)</label>
    </listViews>
    <nameField>
        <label>Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <recordTypes>
        <fullName>Accreditation</fullName>
        <active>true</active>
        <label>Accreditation</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Accreditation</fullName>
        <active>true</active>
        <label>External Accreditation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <label>Membership</label>
    </recordTypes>
    <recordTypes>
        <fullName>Re_Accreditation</fullName>
        <active>true</active>
        <label>Re-Accreditation</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>